--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "inngest": "^3.46.0",
-    "mongoose": "^9.0.0"
+    "mongoose": "^9.0.0",
+    "stripe": "^20.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
