--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "express": "^5.1.0",
     "inngest": "^3.46.0",
     "mongoose": "^9.0.0",
+    "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.11",
     "stripe": "^20.0.0"
