--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "server": "nodemon server.js",
+    "dev": "nodemon server.js",
+    "seed": "node scripts/seedData.js",
     "start": "node server.js"
   },
   "keywords": [],
