--- a/server/.env
+++ b/server/.env
@@ -20,3 +20,9 @@ STRIPE_SECRET_KEY=sk_test_51SbDIcP97LHN1JRNjSZHAFE6zDe0HgWej4l8HUjMwXGzpw7BTzjYY
 CLOUDINARY_NAME=dgtp07yyk
 CLOUDINARY_API_KEY=145487194454138
 CLOUDINARY_API_SECRET=IoLhjX-DrH4Vxg_86CAru0tXEEQ
+
+RESEND_API_KEY=re_8L5XuRRG_8MmFnjQ1gLScSvh2qHddriEu
+
+
+# RESEND_API_KEY=re_FtPsT1Yh_M1frQML37v1kRUeYhpmSaTca this for buiquangdat1011
+
