--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,8 @@
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.11",
+    "qrcode": "^1.5.4",
+    "resend": "^6.9.2",
     "stripe": "^20.0.0"
   },
   "devDependencies": {
